--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.2",
-    "@angular/cdk": "~9.1.0",
-    "@angular/cli": "^9.0.7",
+    "@angular/cdk": "10.0.6",
+    "@angular/cli": "10.0.6",
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
@@ -38,8 +38,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
-    "@angular/cdk": "~9.1.0",
-    "@angular/cli": "^9.0.7",
+    "@angular/cdk": "10.0.6",
+    "@angular/cli": "10.0.6",
     "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "~9.0.0",
     "@types/jasmine": "~3.3.8",
