--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^10.0.7",
+    "@angular/compiler-cli": "^10.0.11",
     "@angular/animations": "~9.0.2",
-    "@angular/cdk": "10.0.6",
-    "@angular/cli": "10.0.6",
+    "@angular/cdk": "~9.1.0",
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
@@ -38,9 +39,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
-    "@angular/cdk": "10.0.6",
-    "@angular/cli": "10.0.6",
-    "@angular/compiler-cli": "^9.0.7",
+    "@angular/cdk": "~9.1.0",
+    "@angular/cli": "^10.0.7",
+    "@angular/compiler-cli": "^10.0.11",
     "@angular/language-service": "~9.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
