--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.0",
     "@angular/animations": "~9.0.2",
     "@angular/cdk": "~9.1.0",
     "@angular/common": "~9.0.2",
@@ -38,8 +40,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
     "@angular/cdk": "~9.1.0",
-    "@angular/cli": "^10.0.7",
-    "@angular/compiler-cli": "^10.0.11",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
